# CoClassicBot

./: CMakeLists.txt  README.md  coclassic.vcxproj
.claude/: settings.local.json
injector/: main.cpp
src/: config.cpp  dllmain.cpp  hunt_loot.cpp  hunt_loot.h  hunt_settings.h  hunt_stats.cpp  hunt_stats.h  hunt_town.cpp  hunt_town.h  hwid_spoof.cpp  hwid_spoof.h
src/plugins/: archer_hunt_plugin.cpp  base_hunt_plugin.cpp  base_hunt_plugin.h  melee_hunt_plugin.cpp
